2015-08-12  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * doc/gputils.lyx:
    Fixed the bug: "#282 Description of __CODE_START and __CODE_END"
    Thanks to Kurt Deitrick.

2015-08-03  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * configure, configure.ac:
    Updated based on the mplabx-3.05.

2015-08-02  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * header/p16f870.inc, header/p16f871.inc, header/p16f872.inc:
    Fixed the bug: "#281 Header p16f872.inc contains macro with lower case letters"
    Thanks to Martin.

2015-05-19  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * configure.ac, configure:
    Update the DEFAULT_MPLABX_PATH.

2015-05-19  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * doc/gputils.lyx, header/*, libgputils/gpcfg-table.c,
    libgputils/gpprocessor.c, libgputils/gpreg-table.c, lkr/*:
    Updated based on the mplabx-3.00.

2015-03-07  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * doc/Makefile.in, doc/html-help/Makefile.in, gpasm/Makefile.in,
    gplink/Makefile.in, gputils/Makefile.in, header/Makefile.in,
    libgputils/Makefile.in, libiberty/Makefile.in, lkr/Makefile.in,
    man/Makefile.in, man/fr/Makefile.in, Makefile.in, aclocal.m4,
    compile, config.h.in, configure:
    regenerated

2015-03-05  Mats Erik Andersson <meand@users.sourceforge.net>
  * configure.ac:
    Improve the check that Flex is more recent than version 2.5.4.

  * gpasm/Makefile.am, gplink/Makefile.am, gputils/Makefile.am:
    Modify these templates to be portable for use with BSD Make.

2015-03-01  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * header/p16f753.inc, header/p16hv753.inc, header/p16lf1619.inc:
    Updated based on the mplabx-2.35.

2015-03-01  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * doc/gputils.lyx, header/*.inc, libgputils/gpcfg-table.c,
    libgputils/gpreg-table.c, lkr/*.lkr:
    Updated based on the mplabx-2.35.
